WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308508
Crash under WebKit::NetworkDataTaskCocoa::resume()
https://bugs.webkit.org/show_bug.cgi?id=308508
Summary
Crash under WebKit::NetworkDataTaskCocoa::resume()
Chris Dumez
Reported
2026-02-23 17:36:02 PST
Crash under WebKit::NetworkDataTaskCocoa::resume(): ``` ==> 3 WebKit::NetworkDataTaskCocoa::resume() (WebKit) <== 3 WebKit::NetworkLoad::start() (WebKit) pruning: 2 WebKit::NetworkLoadScheduler::HostContext::start(WebKit::NetworkLoad&) (WebKit) pruning: 1 WebKit::NetworkLoadScheduler::HostContext::~HostContext() (WebKit) ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-02-23 17:36:11 PST
<
rdar://170486189
>
Chris Dumez
Comment 2
2026-02-23 18:03:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59286
EWS
Comment 3
2026-02-23 20:59:09 PST
Committed
308100@main
(55d646f09dd8): <
https://commits.webkit.org/308100@main
> Reviewed commits have been landed. Closing PR #59286 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug