Crash under WebKit::NetworkDataTaskCocoa::resume() https://bugs.webkit.org/show_bug.cgi?id=308508 rdar://170486189

Reviewed by Sihui Liu.

During ~NetworkSession, the NetworkLoadScheduler is destroyed, and
HostContext::~HostContext flushes pending loads by calling
NetworkLoad::start(), which calls NetworkDataTaskCocoa::resume(). That
method does downcast<NetworkSessionCocoa>(*m_session), but the
NetworkSessionCocoa subclass has already been destroyed (only the
NetworkSession base remains), so the downcast fails and crashes.

The fix adds an early return in NetworkDataTaskCocoa::resume() when the
session is null or invalidated so that we don't attempt to start a network
load when the network session is gone or in the middle of destruction.

* Source/WebKit/NetworkProcess/NetworkSession.cpp:
(WebKit::NetworkSession::invalidateAndCancel):
* Source/WebKit/NetworkProcess/NetworkSession.h:
(WebKit::NetworkSession::isInvalidated const):
* Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::resume):

Canonical link: https://commits.webkit.org/308100@main